<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView android:id="@+id/movie_detail_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/nonVideoLayout"
                android:layout_width="match_parent"
                android:layout_height="235dp" >
                <com.example.keerthi.movies.VideoEnabledWebView
                    android:id="@+id/trailer"
                    android:layout_width="match_parent"
                    android:layout_height="235dp"
                    android:visibility="gone"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/interested"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/want_to_see"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_interested"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:background="@drawable/header"
                android:text="@string/movie_info"/>
            <TextView
                android:id="@+id/overView"
                android:textSize="15sp"
                android:layout_marginLeft="8dp"
                android:textColor="#433e3e"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                style="@style/Divider"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:padding="5dp"
                android:text="Status: "/>
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#433e3e"
                android:textSize="15sp"
                android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:padding="5dp"
                    android:layout_marginLeft="8dp"
                    android:text="Cast: "/>
                <TextView
                    android:id="@+id/cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#433e3e"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_marginLeft="8dp"
                    android:padding="5dp"
                    android:text="Genre: "
                    />
                <TextView
                    android:id="@+id/genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#433e3e"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="Release Date: "/>
                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#433e3e"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:padding="5dp"
                    android:text="Run time: "/>
                <TextView
                    android:id="@+id/runningTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#433e3e"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:background="@drawable/header"
                android:text="@string/showtime_info"/>
            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zip_code"
                    android:layout_marginLeft="8dp"
                    android:padding="5dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/user_zipCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_text_edit"
                    android:cursorVisible="false"
                    android:inputType="number"
                    android:layout_weight="1"/>
            </LinearLayout>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/theaterList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />
            </LinearLayout>
            <View
                style="@style/Divider"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:background="@drawable/header"
                android:text="@string/photos_lable"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/movieImageList"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scrollbars="horizontal" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/videoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <View
            android:id="@+id/videoLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

    </RelativeLayout>
</FrameLayout>
    <!--
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Directed by   : "
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/directorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Produced by : "
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/producerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Music by       : "
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/musicianName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    </LinearLayout>-->
